@@ -70,6 +70,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [LOG_FORWARDER] [KAFKA] Ensure kafka custom configurations are correctly handled and validated
 - [LOG_FORWARDER] [REDIS] Non-working LogForwarder when no password was set
 - [LOG_FORWARDER] [FILE] Wrong configuration of the spool directory when disk queuing is enabled
+- [BACKEND] Avoid salt errors on 'tcp_health_check_expect_match' field
 
 
 ## [2.10.2] - 2023-09-25
